# Kovalent-v2

./: Cahier_de_projet.odt  README.md  main.py  presentation.md
new_app/: .gitignore  README.md  main.py  pyproject.toml
new_app/kovalent/: __init__.py  app.py  config.py
new_app/kovalent/application/: __init__.py  repositories.py  session.py
new_app/kovalent/domain/: __init__.py  models.py  services.py
new_app/kovalent/infrastructure/: __init__.py  assets.py  repositories.py
new_app/kovalent/tests/: __init__.py  test_services.py  test_session.py
new_app/kovalent/ui/: __init__.py  scenes.py  theme.py  view.py  widgets.py
sources/: main.py
