[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kovalent-reforged"
version = "1.0.0"
description = "A modern Python rewrite of the Kovalent chemistry puzzle game."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kovalent*"]
